# bench-javascript-transformer-written-in-rust

./: .gitignore  Cargo.toml  README.md  memory.sh  package.json  pnpm-lock.yaml  table.ipynb  table.mjs  vite.config.ts
.github/: renovate.json
.github/workflows/: benchmark.yml
benches/: transformer.rs
src/: lib.rs  oxc.rs  swc.rs
