[package]
name = "bench-transformer"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "transformer"
harness = false

[[bin]]
name = "oxc"
path = "src/oxc.rs"
test    = false
doctest = false

[[bin]]
name = "swc"
path = "src/swc.rs"
test    = false
doctest = false

[dependencies]
oxc = { version = "0.35.0", features = ["transformer", "codegen", "semantic"] }

swc = "4.0.0"
swc_common = "3.0.0"
swc_ecma_ast = "3.0.0"
swc_ecma_parser = { version = "4.0.0", features = ["typescript"] }
swc_ecma_transforms = "4.0.0"
swc_ecma_transforms_react = "4.0.0"
swc_ecma_transforms_typescript = "4.0.0"
swc_ecma_visit = "3.0.0"

num_cpus = "1.16.0"
criterion2  = { version = "1.0.0", default-features = false }
rayon = "1.10.0"
mimalloc = "0.1.43"

[features]
codspeed = ["criterion2/codspeed"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"

